--- a/Views/Layout/_LayoutAdmin.cshtml
+++ b/Views/Layout/_LayoutAdmin.cshtml
@@ -51,9 +51,7 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="@Url.Action("ThongTinSanPham","QuanLySanPham")">Tất cả sản phẩm</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href="@Url.Action("ThongTinSanPham","QuanLySanPham")">Thông tin sản phẩm</a>
                     </div>
                 </div>
             </li>
@@ -63,7 +61,7 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                    aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
-                    <span>Quản lý loại sản phẩm</span>
+                    <span>Nhà cung cấp</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                      data-parent="#accordionSidebar">
