--- a/Views/Home/Menupartial.cshtml
+++ b/Views/Home/Menupartial.cshtml
@@ -36,14 +36,14 @@
                                 if (groupItem.Key != null)
                                 {
                                     <li class="dropdown">
-                                        <a href="@Url.Action("SanPhamTheoLoai","Home",new { id = groupItem.Key.MaLoaiSP })">@groupItem.Key.TenLoai</a>
+                                        <a href="@Url.Action("SanPhamTheoLoai","SanPham",new { maLoai = groupItem.Key.MaLoaiSP })">@groupItem.Key.TenLoai</a>
                                         <ul class="hb-dropdown">
                                             @foreach (var item in groupItem.GroupBy(m => m.NhaSanXuat))
                                             {
                                                 if (item.Key != null)
                                                 {
                                                     <li>
-                                                        <a href="@Url.Action("SanPhamTheoNhaSanXuat","Home",new { maLoai = groupItem.Key.MaLoaiSP, maNSX = item.Key.MaNSX})">@item.Key.TenNSX</a>
+                                                        <a href="@Url.Action("SanPhamTheoNhaSanXuat","SanPham",new { maLoai = groupItem.Key.MaLoaiSP, maNSX = item.Key.MaNSX})">@item.Key.TenNSX</a>
                                                     </li>
                                                 }
                                             }
