--- a/Views/Sanpham/DonGia.cshtml
+++ b/Views/Sanpham/DonGia.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="sidebar-categores-box search-filter mt-sm-25 mt-xs-30">
+﻿@using WebsiteBanHang.Models
+@model IEnumerable<SanPham>
+<div class="sidebar-categores-box search-filter mt-sm-25 mt-xs-30">
     <div class="sidebar-title">
         <h2>Filter By</h2>
     </div>
@@ -16,46 +18,40 @@
                         Tất cả
                     </a>
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia1_5", "SanPham", new {@maNSX = Request.RequestContext.RouteData.Values["maNSX"]})">
-                        1 triệu -
-                        5 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("1 triệu - 5 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "1-5" }, null)
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia5_10", "SanPham")">
-                        5 triệu -
-                        10 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("5 triệu - 10 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "5-10" }, null)
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia10_15", "SanPham")">
-                        10 triệu -
-                        15 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("10 triệu - 15 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "10-15" }, null)
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia15_30", "SanPham")">
-                        15 triệu -
-                        30 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("15 triệu - 30 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "15-30" }, null)
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia30_50", "SanPham")">
-                        30 triệu -
-                        50 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("30 triệu - 50 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "30-50" }, null)
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGia50_100", "SanPham")">
-                        50 triệu -
-                        100 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("50 triệu - 100 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "50-100" }, null)
                 </li>
+
                 <li>
-                    <input type="radio" name="product-categori"><a href="@Url.Action("SidebarDonGiaTren100", "SanPham")">
-                        Trên 100 triệu
-                    </a>
+                    <input type="radio" name="product-categori">
+                    @Html.ActionLink("Trên 100 triệu", "SanPhamTheoNhaSanXuatDonGia", "SanPham", new { maLoai = ViewBag.MaLoai, maNSX = ViewBag.MaNSX, priceRange = "Tren100" }, null)
                 </li>
             </ul>
         </form>
