--- a/Views/Sanpham/SanPhamTheoNhaSanXuatDonGia.cshtml
+++ b/Views/Sanpham/SanPhamTheoNhaSanXuatDonGia.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebsiteBanHang.Models
 @{
-    ViewBag.Title = "SanPhamTheoLoai";
+    ViewBag.Title = "SanPhamTheoNhaSanXuatDonGia";
     Layout = "~/Views/Layout/_LayoutHomeProduct.cshtml";
 }
 @using PagedList.Mvc
@@ -45,7 +45,7 @@
                                         <li>
                                             @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount
                                         </li>
-                                        <li class="" style="float:right">@Html.PagedListPager(Model, Page => @Url.Action("SanPhamTheoLoai", new { Page = Page, @id = ViewBag.Maloai }))</li>
+                                        <li class="" style="float:right">@Html.PagedListPager(Model, Page => @Url.Action("SanPhamTheoNhaSanXuatDonGia", new { Page = Page, @maLoai = ViewBag.MaLoai, @maNSX = ViewBag.MaNSX }))</li>
                                     </ul>
                                 </div>
                             </div>
