--- a/Views/GioHang/ThongBao.cshtml
+++ b/Views/GioHang/ThongBao.cshtml
@@ -3,7 +3,7 @@
         <div class="empty-cart">
             <img src="~/assets/images/minicart/empty-cart.png" />
             <div class="empty-cart-text">
-                <h1>Sản phẩm hiện tại đã hết hàng! </h1>
+                <h1>Sản phẩm hiện tại Không đủ số số lượng mà bạn muốn! </h1>
                 <p>Hãy mua hàng ngàn sản phẩm chất lượng khác tại Shop nhé!</p>
                 <a href="@Url.Action("DanhSachSanPham", "Home")" class="fb-btn">Mua sắm ngay</a>
             </div>
