--- a/Views/Layout/_LayoutHome.cshtml
+++ b/Views/Layout/_LayoutHome.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home Version Four | FastBuy - Mega Shop eCommerce Bootstrap 4 Template</title>
+    <title>@ViewBag.Title</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,23 +43,7 @@
 </head>
     <body>
         <div class="body-wrapper bg-white">
-            <header class="bg-midnight header-4">
-                <div class="header-top bg-white">
-                    <div class="container">
-                        <div class="header-top-nav">
-                            <div class="row">
-                                @Html.Partial("~/views/layout/_layoutheadertop.cshtml")
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                @Html.Action("Menupartial", "Home")
-                @Html.Partial("~/Views/Layout/_LayoutSearch.cshtml")
-            </header>
-            @Html.Partial("~/Views/Layout/_LayoutSlide.cshtml")
-            @Html.Action("SlideNhaSanXuatPartial", "Home")
             @RenderBody()
-            @Html.Partial("~/Views/Layout/_Layoutfooter.cshtml")
         </div>
     <!-- JS
         ============================================ -->
