--- a/Views/Layout/_LayoutHomeProduct.cshtml
+++ b/Views/Layout/_LayoutHomeProduct.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home Version Four | FastBuy - Mega Shop eCommerce Bootstrap 4 Template</title>
+    <title>@ViewBag.Titke</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -38,21 +38,13 @@
 </head>
 <body>
     <div class="body-wrapper bg-white">
-        <!-- Begin Header Area -->
         <header class="bg-midnight header-4">
-            <!-- Begin Header Top Area -->
             @Html.Partial("~/Views/Layout/_LayoutHeadertop.cshtml")
-            <!-- Header Top Area End Here -->
             @Html.Action("MenuPartial", "Home")
-            <!-- Begin Header Bottom Area -->
             @Html.Partial("~/Views/Layout/_LayoutSearch.cshtml")
-            <!-- Header Bottom Area End Here -->
         </header>
-        <!-- Header Area End Here -->
         @RenderBody()
-        
         @Html.Partial("~/Views/Layout/_Layoutfooter.cshtml")
-
     </div>
     <!-- Body Wraper Area End Here -->
     <!-- JS
