--- a/Views/Sanpham/SidebarSanPhamPartial.cshtml
+++ b/Views/Sanpham/SidebarSanPhamPartial.cshtml
@@ -7,14 +7,14 @@
                 if (groupItem.Key != null)
                 {
                     <li class="has-sub">
-                        <a href="@Url.Action("SanPhamTheoLoai", "Home", new { id = groupItem.Key.MaLoaiSP })">@groupItem.Key.TenLoai</a>
+                        <a href="">@groupItem.Key.TenLoai</a>
                         <ul>
                             @foreach (var item in groupItem.GroupBy(m => m.NhaSanXuat))
                             {
                                 if (item.Key != null)
                                 {
                                     <li>
-                                        <a href="@Url.Action("SanPhamTheoNhaSanXuat", "Home", new {maLoai = groupItem.Key.MaLoaiSP, id = item.Key.MaNSX })">@item.Key.TenNSX</a>
+                                        <a href="@Url.Action("SanPhamTheoNhaSanXuat", "SanPham", new {maLoai = groupItem.Key.MaLoaiSP, maNSX = item.Key.MaNSX })">@item.Key.TenNSX</a>
                                     </li>
                                 }
                             }
